add_subdirectory(TritonToLinalg)
add_subdirectory(TritonToLinalgExperimental)
add_subdirectory(TritonToStructured)
add_subdirectory(TritonArithToLinalg)
add_subdirectory(StructuredToMemref)
add_subdirectory(FoldUnstructuredTritonAddPtr)
add_subdirectory(UnstructuredToMemref)
add_subdirectory(TritonPtrToMemref)
